--- a/.github/workflows/auto-ozip-decrypt.yml
+++ b/.github/workflows/auto-ozip-decrypt.yml
@@ -14,8 +14,8 @@ on:
     types: [started]
 
 env:
-  FIRMWARE_LINK: https://download.c.realme.com/flash/Rollbackpack/realme_narzo%2020/RMX2191_11_OTA_0190_all_nksxIPHHdisT.ozip #edit link here...
-  FIRMWARE_NAME: RMX2191_11_OTA_0190_all_nksxIPHHdisT.ozip  #edit file name here, you can find the name of file from link itself...
+  FIRMWARE_LINK:https://ota-manual-in.allawnofs.com/ota/21/07/14/1c1632e2-409a-4fbc-9244-58bcbf7a116c.ozip
+  FIRMWARE_NAME: RMX1971EX_11_OTA_1150_all_006aZofuEOvC.ozip
   FINAL_ZIP_NAME: THE_NAME_OF_ZIP_YOU_WANT.zip #This will be the name of final zip which will be uploaded. You can leave it unchanged.
   TZ: Asia/Kolkata
 
@@ -28,7 +28,7 @@ jobs:
          uses: actions/checkout@master
          
        - name: Downloading Ozip Now
-         run: |
+         run: RMX1971EX_11_OTA_1150_all_006aZofuEOvC.zip
             sudo -E apt-get -qq update
             sudo apt install aria2
             aria2c $FIRMWARE_LINK
